--- a/style.css
+++ b/style.css
@@ -45,6 +45,17 @@ body{
     z-index: 1000;
 }
 
+.sticky{
+    position: sticky;
+    top: 0;
+}
+
+.textcolor{
+    font-weight: bold;
+    font-size: 20px;
+    color: #ffcd31;
+}
+
 .menu .logo{
     font-size: 22px;
     font-weight: 800;
@@ -166,28 +177,28 @@ h4{
     text-align: center;
 }
 
-.pizza{
+.empanada{
     padding: 0 0 100px 0;
     text-align: center;
 }
 
-.pizza-content{
+.empanada-content{
     margin-top: 55px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
-.pizza-1{
+.empanada-1{
     padding: 35px;
     text-align: center;
 }
 
-.pizza-1 img{
+.empanada-1 img{
     width: 250px;
 }
 
-.pizza-1 h3{
+.empanada-1 h3{
     font-size: 22px;
     color: #fff4ff;
     margin-bottom: 15px;
@@ -203,6 +214,20 @@ h4{
 .link a{
     color:#fece00
 }
+
+.link .imagen{
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+
+.imagen img{
+    display: flex;
+    width: 30px;
+    height: 30px;
+    text-align: center; 
+}
+
 
 @media(max-width:991px){
     .menu{
@@ -289,11 +314,11 @@ h4{
         margin-bottom: 25px;
     }
 
-    .pizza{
+    .empanada{
         padding: 30px;
     }
 
-    .pizza-content{
+    .empanada-content{
         margin-top: 15px;
         grid-template-columns: repeat(1, 1fr);
     }
