--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ body{
     top: 0;
 }
 
+.sticky{
+    width: 100%;
+    background-color: #515151;
+    opacity: 0.5;
+}
+
 .textcolor{
     font-weight: bold;
     font-size: 20px;
