--- a/style.css
+++ b/style.css
@@ -50,11 +50,11 @@ body{
     top: 0;
 }
 
-.sticky{
+/*.sticky{
     width: auto;
     background-color: #515151;
     opacity: 0.5;
-}
+}*/
 
 .textcolor{
     font-weight: bold;
