--- a/style.css
+++ b/style.css
@@ -231,11 +231,17 @@ h4{
 .imagen{
     display: flex;
     margin-top: 5px;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     color: white;
     font-weight: bold;
     text-align: center; 
+}
+
+.imagen img{
+    width: 20px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
 
 .empanada-1 .fiesta{
