--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ font-family: 'Permanent Marker', cursive;*/
     text-decoration: none;
     list-style: none;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
+
 body{
     font-family: 'Bree Serif', serif;
     font-family: 'Poppins', sans-serif;
