--- a/style.css
+++ b/style.css
@@ -276,8 +276,22 @@ h4{
 }
 
 .imade{
-    width: 30px;
+    width: 40px;
     margin-left: 10px;
+}
+
+.imade:hover{
+    transform: scale(1.1);
+}
+
+
+   
+
+
+h5{
+    font-size: 20px;
+    margin-top: 5px;
+    color: #fece00;
 }
 
 .final{
