--- a/style.css
+++ b/style.css
@@ -250,9 +250,14 @@ h4{
 }
 
 .imagen img{
-    width: 20px;
+    width: 50px;
+    height: 50px;
     margin-right: 10px;
-    border-radius: 50%;
+}
+
+.valido{
+    font-size: x-large;
+    text-align: center;
 }
 
 .empanada-1 .fiesta{
@@ -358,6 +363,7 @@ h5{
 
     .header-img img{
         width: 300px;
+        height: 200px;
     }
 
     h2{
