--- a/style.css
+++ b/style.css
@@ -20,12 +20,16 @@ html{
 body{
     font-family: 'Bree Serif', serif;
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(
+    background: #200122;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6f0000, #200122);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6f0000, #200122); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /*background: linear-gradient(
         90deg,
         rgba(39,1,32,1)33%,
         rgba(50,1,49,1)69%,
         rgba(77,13,55,1)100%
-    ); 
+    );*/
 }
 
 .container{
