--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ background: linear-gradient(to right, #6f0000, #200122); /* W3C, IE 10+/ Edge, F
 
 .header-img img{
     width: 500px;
+    vertical-align: middle;
 }
 
 .menu label{
@@ -173,7 +174,9 @@ p{
 }
 
 .info-1 img{
-   width: 450px;
+   width: 400px;
+   height: 280px;
+   vertical-align: middle;
 }
 
 .info-2{
